<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MyProfileActivity"
    tools:viewBindingIgnore="true"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TextView
        android:id="@+id/tv_title_my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:layout_marginTop="20dp"
        style="@style/heading1"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:paddingHorizontal="10dp"
        android:backgroundTint="@color/lightGrey"
        app:cardCornerRadius="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="0dp"
        app:cardElevation="0dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/back_icon"
            android:src="@drawable/baseline_arrow_back_24"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_my_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:cardCornerRadius="200dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_my_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:scaleType="centerCrop"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_margin="12dp"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/my_picture"
            android:src="@drawable/rafli"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        style="@style/title"
        app:layout_constraintTop_toBottomOf="@id/cv_my_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_email"
        style="@style/heading1"
        android:textStyle="normal"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_my_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_zakoraa"
        style="@style/heading1"
        android:textStyle="normal"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
     <TextView
        android:id="@+id/tv_linkedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_linked_in"
        style="@style/heading1"
        android:textStyle="normal"
         android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_github"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
