<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.CharacterDetailsActivity">

    <ImageView
        android:id="@+id/iv_characters_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/detail_character_image"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_box_character_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/top_rounded_border"
            android:padding="20dp">

            <ImageView
                android:id="@+id/iv_characters_house"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:src="@tools:sample/avatars"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/detail_character_image"
                />

            <TextView
                android:id="@+id/tv_characters_house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/heading1"
                app:layout_constraintTop_toBottomOf="@id/iv_characters_house"
                app:layout_constraintStart_toStartOf="@id/iv_characters_house"
                app:layout_constraintEnd_toEndOf="@id/iv_characters_house"/>

            <TextView
                android:id="@+id/tv_characters_name"
                style="@style/heading1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_characters_house"
                app:layout_constraintTop_toTopOf="@id/iv_characters_house"
                android:layout_marginStart="8dp"
                />

            <TextView
                android:id="@+id/tv_actor"
                tools:viewBindingIgnore="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actor"
                app:layout_constraintStart_toEndOf="@id/iv_characters_house"
                app:layout_constraintTop_toBottomOf="@id/tv_characters_name"
                android:layout_marginStart="8dp"
                />

            <TextView
                android:id="@+id/tv_characters_actor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_actor"
                app:layout_constraintTop_toTopOf="@id/tv_actor"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="2dp"
                />

            <TextView
                android:id="@+id/tv_age"
                tools:viewBindingIgnore="true"
                android:text="@string/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/iv_characters_house"
                app:layout_constraintTop_toBottomOf="@id/tv_characters_actor"
                android:layout_marginStart="8dp"
                />

            <TextView
                android:id="@+id/tv_characters_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_age"
                app:layout_constraintTop_toTopOf="@id/tv_age"
                app:layout_constraintBottom_toBottomOf="@id/tv_age"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="2dp"
                />

            <TextView
                android:id="@+id/tv_episode_count"
                tools:viewBindingIgnore="true"
                android:text="@string/episode_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/iv_characters_house"
                app:layout_constraintTop_toBottomOf="@id/tv_characters_age"
                android:layout_marginStart="8dp"
                />

            <TextView
                android:id="@+id/tv_characters_episode_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_episode_count"
                app:layout_constraintTop_toTopOf="@id/tv_episode_count"
                app:layout_constraintBottom_toBottomOf="@id/tv_episode_count"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="2dp"
                />

            <TextView
                android:id="@+id/tv_culture"
                tools:viewBindingIgnore="true"
                android:text="@string/culture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/iv_characters_house"
                app:layout_constraintTop_toBottomOf="@id/tv_episode_count"
                android:layout_marginStart="8dp"
                />

            <TextView
                android:id="@+id/tv_characters_culture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_culture"
                app:layout_constraintTop_toTopOf="@id/tv_culture"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="2dp"
                />

            <TextView
                android:id="@+id/tv_desc"
                tools:viewBindingIgnore="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toEndOf="@id/iv_characters_house"
                app:layout_constraintTop_toBottomOf="@id/tv_characters_culture"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_characters_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/iv_characters_house"
                app:layout_constraintTop_toBottomOf="@id/tv_desc"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@id/tv_characters_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:paddingVertical="5dp"
        android:paddingHorizontal="15dp"
        style="@style/heading1"
        app:layout_constraintTop_toBottomOf="@id/cv_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_border"
        android:textAlignment="center"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:paddingHorizontal="10dp"
        android:backgroundTint="@color/lightGrey"
        app:cardCornerRadius="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="0dp"
        app:cardElevation="0dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/back_icon"
            android:src="@drawable/baseline_arrow_back_24"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_share"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:paddingHorizontal="10dp"
        android:backgroundTint="@color/lightGrey"
        app:cardCornerRadius="200dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="0dp"
        app:cardElevation="0dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/share_icon"
            android:src="@drawable/share"/>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>