<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/lightGrey"
    app:cardCornerRadius="20dp"
    android:layout_margin="3dp"
    android:padding="5dp"
    android:elevation="0dp"
    app:cardElevation="0dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_photo_character"
            tools:viewBindingIgnore="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_characters_image"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/characters_image"/>

                <ImageView
                    android:id="@+id/iv_characters_house"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_margin="8dp"
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:contentDescription="@string/characters_house_image"
                    android:layout_alignEnd="@id/iv_characters_image"
                    android:layout_alignTop="@id/iv_characters_image"
                    />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_characters_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/heading1"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_photo_character" />

        <Button
            android:id="@+id/btn_see_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_characters_name"
            android:text="@string/see_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
